tests: Fix OSRTest failures (see #3832)
Wait for element bounds to be available before sending events that
depend on them. Ignore unrelated element focus notifications on
initial page load. Improve verbose debug logging.

--- a/tests/shared/resources/osr_test.html
+++ b/tests/shared/resources/osr_test.html
@@ -181,7 +181,7 @@
   <li id='LI10' title='EXPECTED_TOOLTIP'>Mouse over this element will
       trigger show a tooltip</li>
   <li id='LI11' onclick='selectText(event)'>SELECTED_TEXT_RANGE</li>
-  <li><input id='email' type='text' size=10 inputmode='email'></li>
+  <li><input id='email' type='text' size=10 inputmode='email' onfocus="onFocusTest(event)"></li>
   <li id="quickmenu">Long touch press should trigger quick menu</li>
   </ol>
 
