docs: Rewrite Bitbucket Wiki links to docs/ (see #4085)

--- a/tests/cefclient/resources/window.html
+++ b/tests/cefclient/resources/window.html
@@ -107,7 +107,7 @@ function execWindowAction() {
 <body bgcolor="white" onload="setup()">
 <form id="form">
 <p class="bold">Click a button to perform the associated window action.</p>
-<p>Input values are in DIP coordinates. See <a href="https://bitbucket.org/chromiumembedded/cef/wiki/GeneralUsage#markdown-header-coordinate-systems" target="_new">here</a> for important details about coordinate systems and window behavior.</p>
+<p>Input values are in DIP coordinates. See <a href="https://github.com/chromiumembedded/cef/blob/master/docs/general_usage.md#coordinate-systems" target="_new">here</a> for important details about coordinate systems and window behavior.</p>
 <details>
 <summary>Implementation details for cefclient (click to expand).</summary>
 <ul>
